# MultiAgent-AI

./: ._target  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
config/: default.toml
crates/: ._store
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: builder.rs  capability.rs  context.rs  dag.rs  delegation.rs  lib.rs  memory.rs  persistence.rs  planning.rs  react.rs  sop.rs
crates/controller/tests/: memory_test.rs  planning_test.rs  reflection_test.rs  registry_test.rs  security_test.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/core/src/types/: agent.rs  intent.rs  mod.rs  model.rs  refs.rs  request.rs  session.rs  tool.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: audio.rs  lib.rs  router.rs  semantic_cache.rs  server.rs  vision.rs
crates/governance/: Cargo.toml
crates/governance/src/: budget.rs  guardrails.rs  lib.rs  metrics.rs  security.rs  tracing_layer.rs
crates/governance/tests/: rbac_audit_test.rs
crates/model_gateway/: Cargo.toml
crates/model_gateway/src/: lib.rs  pricing.rs  providers.rs  rig_client.rs  selector.rs
crates/skills/: Cargo.toml
crates/skills/src/: builtin.rs  code_simplifier.rs  composite_registry.rs  lib.rs  mcp_adapter.rs  mcp_registry.rs  registry.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  memory.rs  redis.rs  s3.rs  vector.rs
deploy/k8s/: deployment.yaml
src/: main.rs
tests/integration/: text_pipeline_test.rs
