[package]
name = "mutilAgent-skills"
version.workspace = true
edition.workspace = true

[dependencies]
mutilAgent-core.workspace = true
mutilAgent-store.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
anyhow.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
async-mcp.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
